--- a/src/admin-panel/employee-manage-2.html
+++ b/src/admin-panel/employee-manage-2.html
@@ -135,10 +135,16 @@
                         <div class="serach-box">
                             <div class="d-flex align-items-center justify-content-between  mb-3">
                             <p class="text-black fs-16 fw-600 ">Your Employees</p>
-                            <button type="button" class="btn-add   d-flex align-items-center">
-                                <img src="../images/add-pluse-circle.svg" alt="Add" class="icon">
-                                Add Employee
+                            <div class="d-flex align-items-center">
+                            <button type="button" class="btn-add me-3  btn-red  d-flex align-items-center">
+                                <img src="../images/red-dlt.svg" alt="Add" class="icon">
+                                Delete
                             </button>
+                            <button type="button" class="btn-add btn-orange   d-flex align-items-center">
+                                <img src="../images/disabled.svg" alt="Add" class="icon">
+                                Disable
+                            </button>
+                        </div>
                             </div>
                             <!-- <h3 class="fw-600"></h3> -->
                             <div class="input-group search">
@@ -259,6 +265,7 @@
                             </table>
                         </div>
 
+                        
 
                         
                     </div>
