--- a/src/admin-panel/pending-transcation.html
+++ b/src/admin-panel/pending-transcation.html
@@ -234,7 +234,7 @@
                             </div>
                             <div style="flex:auto;" class="tab-content" id="v-pills-tabContent">
                                 <div class="tab-pane fade flex-auto summary-data active show" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                                    <div class="text-center">
+                                    <div class="text-center mt-4">
                                     <img src="../images/no-transcation.svg" alt="" />
                                     <button type="button" class="btn-add mt-4 mx-auto add-driver d-flex align-items-center">
                                         <img src="../images/add-pluse-circle.svg" alt="Add" class="icon">
