--- a/src/admin-panel/admin-panel-2.html
+++ b/src/admin-panel/admin-panel-2.html
@@ -1336,10 +1336,10 @@
                                 </a><!-- notes-card -->
                                 <a href="client-profile-Notes-2-responsive.html" class="notes-card">
                                     <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
+                                        <div class="notes-description">
+                                            <div class="update-log bg-gray">04 Honda Added</div>
+                                            <div class="update-log bg-gray">Skoda Octavia Vehicle Added</div>
+                                        </div>
                                     </div>
                                     <div class="notes-card-footer">
                                         <div class="notes-user">
@@ -1352,10 +1352,10 @@
                                 </a><!-- notes-card -->
                                 <a href="client-profile-Notes-2-responsive.html" class="notes-card">
                                     <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
+                                        <div class="notes-description">
+                                            <div class="update-log bg-gray">04 Honda Added</div>
+                                            <div class="update-log bg-gray">Skoda Octavia Vehicle Added</div>
+                                        </div>
                                     </div>
                                     <div class="notes-card-footer">
                                         <div class="notes-user">
@@ -1368,10 +1368,11 @@
                                 </a><!-- notes-card -->
                                 <a href="client-profile-Notes-2-responsive.html" class="notes-card">
                                     <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
+                                        <div class="notes-description">
+                                            <div class="update-log bg-gray">04 Honda Added</div>
+                                            <div class="update-log bg-gray">Skoda Octavia Vehicle Added</div>
+                                            <div class="update-log bg-gray">Skoda Octavia Vehicle Added</div>
+                                        </div>
                                     </div>
                                     <div class="notes-card-footer">
                                         <div class="notes-user">
