home insurance screens

--- a/src/home-insurance/11-animal-details.html
+++ b/src/home-insurance/11-animal-details.html
@@ -336,7 +336,7 @@
                                                                         <h5 class="fs-16">Any bite history?</h5>
                                                                         <div class="d-flex align-items-center justify-content-start">
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingYes">
+                                                                                <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="type1"
                                                                                         value="" id="livingYes" checked="">
                                                                                     <span class="radio-custom"></span>
@@ -344,7 +344,7 @@
                                                                                 </label>
                                                                             </div>
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingNo">
+                                                                                <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="type1"
                                                                                         value="" id="livingNo" >
                                                                                     <span class="radio-custom"></span>
@@ -496,7 +496,7 @@
                                                                         <h5 class="fs-16">Any bite history?</h5>
                                                                         <div class="d-flex align-items-center justify-content-start">
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingYes">
+                                                                                <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="type2"
                                                                                         value="" id="livingYes" checked="">
                                                                                     <span class="radio-custom"></span>
@@ -504,7 +504,7 @@
                                                                                 </label>
                                                                             </div>
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingNo">
+                                                                                <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="type2"
                                                                                         value="" id="livingNo" >
                                                                                     <span class="radio-custom"></span>
@@ -657,7 +657,7 @@
                                                                         <h5 class="fs-16">Any bite history?</h5>
                                                                         <div class="d-flex align-items-center justify-content-start">
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingYes">
+                                                                                <label class="radio-inline radio-btn" for="livingYes">
                                                                                     <input class="radio-control" type="radio" name="livding"
                                                                                         value="" id="livingYes" checked="">
                                                                                     <span class="radio-custom"></span>
@@ -665,7 +665,7 @@
                                                                                 </label>
                                                                             </div>
                                                                             <div class="d-flex align-self-center me-3">
-                                                                                <label class="radio-inline" for="livingNo">
+                                                                                <label class="radio-inline radio-btn" for="livingNo">
                                                                                     <input class="radio-control" type="radio" name="livding"
                                                                                         value="" id="livingNo" >
                                                                                     <span class="radio-custom"></span>
