--- a/src/home-insurance/13-swiming-pool-detail.html
+++ b/src/home-insurance/13-swiming-pool-detail.html
@@ -211,7 +211,7 @@
                                                 <h5 class="fs-16">Is swimming pool is fenced?</h5>
                                                 <div class="d-flex align-items-center justify-content-start">
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="livingYes">
+                                                        <label class="radio-inline radio-btn" for="livingYes">
                                                             <input class="radio-control" type="radio" name="fenced"
                                                                 value="" id="livingYes" checked="">
                                                             <span class="radio-custom"></span>
@@ -219,7 +219,7 @@
                                                         </label>
                                                     </div>
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="livingNo">
+                                                        <label class="radio-inline radio-btn" for="livingNo">
                                                             <input class="radio-control" type="radio" name="fenced"
                                                                 value="" id="livingNo" >
                                                             <span class="radio-custom"></span>
@@ -233,7 +233,7 @@
                                                 <h5 class="fs-16">Is it Above or inground?</h5>
                                                 <div class="d-flex align-items-center justify-content-start">
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="Above">
+                                                        <label class="radio-inline radio-btn" for="Above">
                                                             <input class="radio-control" type="radio" name="inground"
                                                                 value="" id="Above" checked="">
                                                             <span class="radio-custom"></span>
@@ -241,7 +241,7 @@
                                                         </label>
                                                     </div>
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="Inground">
+                                                        <label class="radio-inline radio-btn" for="Inground">
                                                             <input class="radio-control" type="radio" name="inground"
                                                                 value="" id="Inground" >
                                                             <span class="radio-custom"></span>
@@ -255,7 +255,7 @@
                                                 <h5 class="fs-16">Does it have diving board?</h5>
                                                 <div class="d-flex align-items-center justify-content-start">
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="divingYes">
+                                                        <label class="radio-inline radio-btn" for="divingYes">
                                                             <input class="radio-control" type="radio" name="diving"
                                                                 value="" id="divingYes" checked="">
                                                             <span class="radio-custom"></span>
@@ -263,7 +263,7 @@
                                                         </label>
                                                     </div>
                                                     <div class="d-flex align-self-center me-3">
-                                                        <label class="radio-inline" for="divingNo">
+                                                        <label class="radio-inline radio-btn" for="divingNo">
                                                             <input class="radio-control" type="radio" name="diving"
                                                                 value="" id="divingNo" >
                                                             <span class="radio-custom"></span>
