--- a/src/admin-panel/admin-panel-2.html
+++ b/src/admin-panel/admin-panel-2.html
@@ -340,7 +340,17 @@
                                             <h3 class="d-none d-md-block mb-0">Which
                                                 policy may I help you with</h3>
 
-                                                <div class="btn-group">
+
+                                                <div class="d-flex align-items-center"><a href="" class="text-uppercase fs-12 text-blue">
+                                                   Active
+                                                </a>
+                                                 <img src="../images/gray-line.png" class="mx-2"> 
+
+                                                <a href="" class="text-uppercase fs-12 text-gray ">
+                                                    View all
+                                                 </a>
+                                                <div class="btn-group ms-3">
+
                                                     <div class=" dropdown-toggle" type="button" id="dropdownMenuClickableInside" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                                         <img class="" src="../images/filter.svg">
                                                     </div>
@@ -396,6 +406,7 @@
                                                      
                                                     </div>
                                                   </div>
+                                                </div>
                                                 </div>
                                             <div
                                                 class="input-group search d-none d-md-flex">
