client profile design fixes

--- a/src/client-profile/0-client-profile-login.html
+++ b/src/client-profile/0-client-profile-login.html
@@ -133,7 +133,7 @@
                 </div>
             </nav>
             <div class="content-main">
-                <div class="content">
+                <div class=" content bg-white">
                     <div class="container mt-5 pt-5">
                         
                         <h3 class="  text-center">Login To Client Profile</h3>
