--- a/src/client-profile/client-profile-1.html
+++ b/src/client-profile/client-profile-1.html
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
-                <div class="content">
+            <div class=" content-main  bg-white full-size">
+                <div class=" content bg-white">
                     <div class="container mt-5 pt-5">
                         <div class="user-card">
                             <div class="user-details">
@@ -225,7 +225,7 @@
                                         <img src="../images/car.svg" alt="">
                                         <h4 class="title fs-18">Auto Insurance</h4>
                                         <div class="serach-box">
-                                            <div class="input-group search bg-white">
+                                            <div class="input-group search bg-white d-flex d-sm-none">
                                                 <img class="" src="../images/search.svg">
                                                 <input class="form-control" type="search" placeholder="Search Policy Name, Car, Address" />
                                             </div>
