--- a/src/client-profile/client-profile-Notes-edit-responsive.html
+++ b/src/client-profile/client-profile-Notes-edit-responsive.html
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
-                <div class="content">
+            <div class=" content-main  bg-white full-size">
+                <div class=" content bg-white">
                     <div class="container mt-5 pt-5">
                         <div class="user-card">
                             <div class="user-details">
@@ -408,7 +408,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-md-6">
+                                        <div class="col-md-12">
                                             <div class="doc-card add-document">
                                                 <img src="../images/document-pair.svg" />
                                                 <span class="doc-title">Click to upload copy of home insurance</span>
