--- a/src/client-profile/client-profile-RTA-history.html
+++ b/src/client-profile/client-profile-RTA-history.html
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
-                <div class="content">
+            <div class=" content-main  bg-white full-size">
+                <div class=" content bg-white">
                     <div class="container mt-5 pt-5">
                         <div class="serach-box">
                             <h2 class="font-bold fs-26 mb-3">RTA History</h2>
