--- a/src/client-profile/1-client-profile-search-client.html
+++ b/src/client-profile/1-client-profile-search-client.html
@@ -128,8 +128,8 @@
                     </div>
                 </div>
             </nav>
-            <div class="content-main full-size">
-                <div class="content">
+            <div class=" content-main  bg-white full-size">
+                <div class=" content bg-white">
                     <div class="container mt-5 pt-5">
 
                         <div class="serach-box">
