--- a/src/admin-panel/coverage-edit.html
+++ b/src/admin-panel/coverage-edit.html
@@ -399,6 +399,13 @@
                                                         /></div>
                                             </div>
 
+
+                                            <div style="gap:10px;" class="d-flex flex-column flex-sm-row align-items-center justify-content-center my-2">
+                                                <button type="submit" class="btn btn-outline"><span>Cancel </span></button>
+                                                <button type="submit" class="btn btn-primary"><span>Save Change</span></button>
+                                               
+                                            </div>
+
     
                                         </div>
 
