Updated PDF forms and home home insurare claim page

--- a/src/home-insurance/27.2-claim-information.html
+++ b/src/home-insurance/27.2-claim-information.html
@@ -260,7 +260,7 @@
                                                                         <div class="input-group date form-control px-0"
                                                                             id="datepicker">
                                                                             <input type="text" class="" id="date"
-                                                                                placeholder="Enter year roof was replaced in" />
+                                                                                placeholder="Date this happened" />
                                                                             <span class="input-group-append ">
                                                                                 <span
                                                                                     class="input-group-text border-0 bg-white d-block">
@@ -279,7 +279,7 @@
                                                                                 </span>
                                                                             </span>
                                                                             <input type="text" class="" id="Cost"
-                                                                                placeholder="Enter amount" />
+                                                                                placeholder="Amount" />
                                                                         </div>
                                                                     </div>
 
@@ -342,7 +342,7 @@
                                                                         <div class="input-group date form-control px-0"
                                                                             id="datepicker">
                                                                             <input type="text" class="" id="date"
-                                                                                placeholder="Enter year roof was replaced in" />
+                                                                                placeholder="Date this happened" />
                                                                             <span class="input-group-append ">
                                                                                 <span
                                                                                     class="input-group-text border-0 bg-white d-block">
@@ -361,7 +361,7 @@
                                                                                 </span>
                                                                             </span>
                                                                             <input type="text" class="" id="Cost"
-                                                                                placeholder="Enter amount" />
+                                                                                placeholder="Amount" />
                                                                         </div>
                                                                     </div>
 
