--- a/src/home-insurance/27.1-claim-information.html
+++ b/src/home-insurance/27.1-claim-information.html
@@ -204,9 +204,9 @@
 
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
-                                <div class="w-50 mx-auto">
+                                <div class="w-75 mx-auto">
                                     <div class="vehicle-details d-flex justify-content-center">
-                                        <div class="row g-3">
+                                        <div class="row g-3 w-100">
 
                                           
                                             
