admin-panel-chanes

--- a/src/admin-panel/admin-panel-2.html
+++ b/src/admin-panel/admin-panel-2.html
@@ -1341,6 +1341,26 @@
                                     </div>
                                 </a>
                                 <a href="client-profile-Notes-2-responsive.html" class="notes-card">
+                                    <div class="d-flex align-items-center justify-content-between mb-1">
+                                    <p class="fs-12 text-light-gray fw-500 ">Deleted</p>
+                                    <p class=" fs-12 fw-600 text-right text-uppercase text-sucess">Restore</p>
+                                </div>
+                                    <div class="notes-description">
+                                        <div class="notes-description">
+                                            <div class="update-log bg-gray">04 Honda Added</div>
+                                            <div class="update-log bg-gray">Skoda Octavia Vehicle Added</div>
+                                        </div>
+                                    </div>
+                                    <div class="notes-card-footer">
+                                        <div class="notes-user">
+                                            Bradley Lawlor
+                                        </div>
+                                        <div class="notes-policy-name">
+                                            Policy Name  <img src="../images/orange-dot.png" />
+                                        </div>
+                                    </div>
+                                </a>
+                                <a href="client-profile-Notes-2-responsive.html" class="notes-card">
                                     <div class="notes-description">
                                         <div class="notes-description">
                                             <div class="update-log bg-gray">04 Honda Added</div>
@@ -1396,7 +1416,15 @@
                                         <input class="form-control" type="search" placeholder="Search In this note" />
                                     </div>
                                 </div> <!-- /search-box -->
-
+                                <div class="pinned-comment my-3 mx-0 px-2">
+                                    <div class="comment">
+                                        <div class="comment-head">
+                                            <p style="letter-spacing: 0.8px;" class=" fs-12 fw-600 text-right text-uppercase text-sucess">Click to Restore Note</p>
+                                           
+                                        </div>
+                                        
+                                    </div><!-- comment -->
+                                </div>
  <div class="accordion custom notes-update-log" id="accordionPolicy">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="headingOnee">
